--- a/backend/style.css
+++ b/backend/style.css
@@ -52,16 +52,55 @@ a {
   color: #d9d9d9;
 }
 
-.button {
-    padding: 6px 24px;
-    border: 2px solid #fff;
-    background: transparent;
-    border-radius: 6px;
+.header .button {
+    --color: #3E0102;
+    background-color: transparent;
+    display: inline-block;
+    width: 8em;
+    height: 2.6em;
+    line-height: 2.5em;
+    margin: 20px;
+    position: relative;
+    overflow: hidden;
+    border: 1px solid white;
+    transition: color .5s;
+    z-index: 1;
+    font-size: 17px;
+    border-radius: 30px;
+    color: #ffffff;
     cursor: pointer;
 }
-.button:active {
-    transform: scale(0.98);
+.header .button:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    background: var(--color);
+    height: 150px;
+    width: 200px;
+    border-radius: 50%;
 }
+
+.header .button:hover {
+    color: #fff;
+}
+   
+.header .button:before {
+    top: 100%;
+    left: 100%;
+    transition: all .7s;
+}
+
+.header .button:hover:before {
+    top: -30px;
+    left: -30px;
+}
+
+.header .button:active:before {
+    background:var(--color);
+    transition: background 0s;
+}
+
+
 
 /* Tela inicial */ 
 .home {
@@ -183,7 +222,7 @@ a {
     justify-content: space-between;
 }
 .form_container a {
-    color: #7d2ae8;
+    color: #3E0102;
     font-size: 12px;
 }
 .form_container a:hover {
@@ -195,7 +234,7 @@ a {
     white-space: nowrap;
 }
 .checkbox input {
-    accent-color: #7d2ae8;
+    accent-color: #3E0102;
  }
 .checkbox label {
     font-size: 12px;
@@ -204,7 +243,7 @@ a {
     color: #0b0217;
 }
 .form_container .button {
-    background: #7d2ae8;
+    background: #3E0102;
     margin-top: 30px;
     width: 100%;
     padding: 10px 0;
