--- a/backend/public/admin.css
+++ b/backend/public/admin.css
@@ -11,17 +11,18 @@
     list-style-type: none;
     margin: 0;
     top: 0;
+    
 }
 
 .sidebar {
-    width: 280px;
+    width: 230px;
     position: fixed;
     left: 0;
     top: 0;
     height: 100%;
     padding: 1rem;
     background: var(--color-main);
-    color: #fff;
+    color: #ffffff;
 }
 .sidebar-brand {
     height: 100px;
@@ -50,19 +51,20 @@ brand-icons span {
     height: 110px;
     border-radius: 60%;
     border-left: 2px solid transparent;
-    border-right: 2px solid #fff;
+    border-right: 2px solid #ffffff;
     border-bottom: 2px solid #fff;
     border-top: 2px solid #fff;
 }
 
 .sidebar-user h3 {
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 .sidebar-user span {
-    font-size: .8rem;
+    font-size: .6rem;
 }
-.sidebar-menu {
-    margin-top: 3rem;
+
+.menu-head ul {
+     margin-left: 20rem;   
 }
 
 .menu-head {
@@ -74,34 +76,37 @@ brand-icons span {
 }
 
 .sidebar ul {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.0rem;
 }
 
 .sidebar-menu li {
-    margin-bottom: .8rem;
+    margin-bottom: .5rem;
     
 }
 
 .sidebar-menu li a {
     color: #efefef;
-    font-size: .85rem;
+    font-size: .7rem;
     display: flex;
     align-items: center;
+    
+}
+
+.menu-block li {
+    margin-left: -1.5rem;
 }
 
 .sidebar-menu li a span {
-    font-size: 1.5rem;
+    font-size: 1rem;
     display: inline-block;
-    margin-right: .8rem;
-
 }
 
 .main-content {
-    margin-left: 280px;
+    margin-left: 230px;
 }
 
 header {
-    height: 70px;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
