--- a/backend/public/admin.css
+++ b/backend/public/admin.css
@@ -14,6 +14,23 @@
     
 }
 
+#sidebar-toggle {
+    display: none;
+}
+
+#sidebar-toggle:checked ~ .sidebar {
+    left: -100%;
+}
+#sidebar-toggle:checked ~ .main-content header {
+    left: 0;
+    width: 100%;
+    right: 0;
+}
+
+#sidebar-toggle:checked ~ .main-content {
+   margin-left: 0;
+}
+
 .sidebar {
     width: 230px;
     position: fixed;
@@ -23,6 +40,8 @@
     padding: 1rem;
     background: var(--color-main);
     color: #ffffff;
+    z-index: 20;
+    transition: left 300ms;
 }
 .sidebar-brand {
     height: 100px;
@@ -104,12 +123,127 @@ brand-icons span {
 
 .main-content {
     margin-left: 230px;
+    transition: left 300ms;
 }
 
 header {
-    height: 80px;
+    height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #efefef;
+    background-color: #ffffff;
+    transition: left 300ms;
 }
+
+main {
+    padding: 1.5rem;
+    background: #f1f5f9;
+    min-height: calc(100vh - 70px) ;
+}
+
+.page-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-actions button {
+    outline: none;
+    color: #fff;
+    background: var(--color-main);
+    border: none;
+    padding: .5rem 1rem;
+    margin-left: 1rem;
+    border-radius: 30px;
+    font-weight: 600;
+}
+
+.header-actions button span {
+    font-size: 1.2rem;
+    margin-right: .6re;
+
+}
+
+
+/* CARDS */
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+}
+
+.card-single {
+    background: #fff;
+    padding: 1rem;
+    box-shadow: 4px 4px 10px rgba (0,0,0,0,1);
+    border-radius: 2px;
+}
+
+.card-flex {
+    display: grid;
+    grid-template-columns: 70% auto;
+    align-items: center;
+}
+
+.card-head span {
+    display: block;
+    text-transform: uppercase;
+    color: #555;
+    font-size: .9rem;
+}
+
+.card-head small {
+    font-weight: 600;
+    color: #555;
+}
+
+.card-info h2 {
+    font-size: 1.3rem;
+    color: #333;
+}
+
+.card-chart span {
+    font-size: 4rem;
+}
+
+.card-chart.sucess span {
+    color: seagreen;
+}
+
+.card-chart.danger span {
+    color: tomato;
+}
+
+.card-chart.yellow span {
+    color: orangered;
+}
+
+
+.jobs table {
+    overflow-x: auto;
+}
+
+@media only screen and (max-width: 1124px) {
+    .sidebar{
+        left: -100%;
+        z-index: 30;
+    }
+    .main-content {
+        margin-left: 0;
+    }
+    header {
+        left: 0;
+        width: 100%;
+    }
+
+    #sidebar-toggle:checked ~ .sidebar{
+        left: 0;
+
+    }
+   .cards {
+    grid-template-columns: repeat(2, 1fr);
+   }
+}
+
+
