--- a/backend/public/admin.css
+++ b/backend/public/admin.css
@@ -129,11 +129,44 @@ brand-icons span {
 header {
     height: 60px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     background-color: #ffffff;
     transition: left 300ms;
 }
+
+header .menu-toggle {
+    margin-left: 1rem;
+    height: 1rem;
+    cursor: pointer;
+   
+}
+.search-bar form {
+    display: flex;
+    align-items: center;
+}
+  
+.search-bar input[type="text"] {
+    margin-left: 20rem;
+    width: 400px;
+    padding: 10px;
+    border-radius: 5px;
+    border: black;
+    font-size: 16px;
+}
+  
+.search-bar button {
+    height: 35px;
+    padding: 10px;
+    border-radius: 8px;
+    border: none;
+    background-color: var(--color-main);
+    color: white;
+    margin-left: 10px;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+
 
 main {
     padding: 1.5rem;
