--- a/backend/public/style.css
+++ b/backend/public/style.css
@@ -138,7 +138,7 @@ a {
     justify-content: center;
     align-items: center;
     height: 200px;
-    background-image: url('./background1.jpg');
+    background-image: url('imgs/background1.jpg');
     background-size: cover;
     background-position: center;
     transition: all .5s;
@@ -201,7 +201,7 @@ a {
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: url(background.jpg);
+    background-image: url(imgs/background.jpg);
     background-size: cover;
     background-position: center;;
 
@@ -368,7 +368,7 @@ ul{
 }
  
 .footer{
-	background-image: url(footer.jpg);
+	background-image: url(imgs/footer.jpg);
     padding: 100px 100;
     height: 500px;
 }
