--- a/backend/public/css/Template.css
+++ b/backend/public/css/Template.css
@@ -1,22 +1,36 @@
-body {
-    background-color: lightgray;
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('../fonts/Oswald-Regular.ttf') format('truetype');
+}
+
+body{
+    margin: 0;
+    background-color: rgb(131, 82, 82);
+    
 }
 
 .menu-principal {
-    min-width: 500px;
-    text-align: center;
+    margin-left: 2px;
+    width: 600px;
+    text-align: left;
+   
 }
 
 .menu-principal h1 {
-    background: #333;
-    color: #fff;
-    border-bottom: solid 5px #4faddb;
-    padding: 15px 0px;
+    width: 250px;
+    background: #302d2d;
+    text-align: center;
+    font-size: 20px;
+    color: #fffb00;
+    border-bottom: solid 5px #575104;
+    padding: 10px 0px;
     margin: 0;
 }
 
 .menu-principal nav {
     display: inline-block;
+    align-items: end;
     background-color: #fff;
     min-width: 248px;
 }
@@ -27,8 +41,10 @@ body {
     text-decoration: none;
     color: #222;
     font-size: 1.2em;
+
 }
 
 .menu-principal a:hover {
-    background-color: rgba(79, 173, 219, .4);
+    background-color: rgba(240, 236, 6, 0.952);
 }
+
